--- a/package.json
+++ b/package.json
@@ -38,8 +38,13 @@
     "@angular/router": "^19.2.8",
     "@ngneat/svg-icon": "^7.1.6",
     "@primeng/themes": "^19.1.0",
+    "@tailwindcss/postcss": "^4.1.4",
+    "postcss": "^8.5.3",
+    "primeicons": "^7.0.0",
     "primeng": "^19.1.0",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.4",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
