--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,15 @@
     "module": "ES2022",
     "paths": {
       "@app/*":["./src/app/*"],
+
+      "@domain/*": ["src/app/domain/*"],
+      "@infrastructure/*": ["src/app/infrastructure/*"],
+      "@application/*": ["src/app/application/*"],
+      "@features/*": ["src/app/features/*"],
       "@core/*":["./src/app/core/*"],
-      "@env/*":["./src/environments/*"],
       "@shared/*":["./src/app/shared/*"],
-      "@module/*":["./src/app/modules/*"],
+
+      "@env/*":["./src/environments/*"],
       "@assets/*":["./src/assets/*"]
     }
   },
