**feat** added primeng template "SAKAI"

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "format": "prettier --write \"**/*.{js,mjs,ts,mts,d.ts,html}\" --cache",
     "test": "ng test",
     "prestart": "npm run svg",
     "prebuild": "npm run svg",
@@ -39,6 +40,7 @@
     "@ngneat/svg-icon": "^7.1.6",
     "@primeng/themes": "^19.1.0",
     "@tailwindcss/postcss": "^4.1.4",
+    "chart.js": "^4.4.9",
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.0",
