--- a/angular.json
+++ b/angular.json
@@ -18,6 +18,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/form-builder",
+            "baseHref": "/form-builder/",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -106,6 +107,9 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
