**feat** Express js minimal backend for JWT created

--- a/package.json
+++ b/package.json
@@ -42,14 +42,23 @@
     "@ngneat/svg-icon": "^7.1.6",
     "@primeng/themes": "^19.1.0",
     "@tailwindcss/postcss": "^4.1.4",
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
     "chart.js": "^4.4.9",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
+    "path": "^0.12.7",
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.0",
     "rxjs": "~7.8.0",
+    "socket.io": "^4.8.1",
     "tailwindcss": "^4.1.4",
     "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
+    "url": "^0.11.4",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
